# WoundsAre3D

./: .gitignore  PRODUCTION.md  README.md  RUNBOOK.md  pyproject.toml  test_geometry.py  uncertainty.py  woundscan_max_accuracy_prompt.md
.github/workflows/: engine-ci.yml  ios-ci.yml  regulatory.yml  web-ci.yml
infrastructure/terraform/: README.md
woundscan-engine/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
woundscan-engine/docs/: architecture.md  deployment.md  math_reference.md  ml_models.md  regulatory_traceability.md  validation_protocol.md
woundscan-engine/examples/: demo_geometry.py
woundscan-engine/scripts/: check_traceability.py  make_icon.py
woundscan-engine/src/woundscan/: __init__.py
woundscan-engine/src/woundscan/api/: __init__.py  audit.py  auth.py  main.py  pipeline.py  worker.py
woundscan-engine/src/woundscan/api/models/: __init__.py  measurement.py
woundscan-engine/src/woundscan/api/routes/: admin.py  auth.py  billing.py  grafts.py  health.py  measurements.py  notes.py  phantom.py  uploads.py  wounds.py
woundscan-engine/src/woundscan/auth/: __init__.py  audit_log.py  identity.py  mfa.py  rbac.py  sessions.py
woundscan-engine/src/woundscan/billing/: __init__.py  medicare.py
woundscan-engine/src/woundscan/capture/: __init__.py  depth_map.py  fiducial.py  multiframe.py  multispectral.py  photo.py  point_cloud.py  polarization.py  probe.py
woundscan-engine/src/woundscan/fusion/: __init__.py  bundle_adjustment.py  force_correction.py  gaussian_process.py  interpolation.py  temporal.py
woundscan-engine/src/woundscan/geometry/: __init__.py  perimeter.py  shape_descriptors.py  surface_area.py  uncertainty.py  undermining.py  volume.py
woundscan-engine/src/woundscan/graft/: __init__.py  product_db.py  recommendation.py  sizing.py
woundscan-engine/src/woundscan/ml/: __init__.py  boundary_segmentation.py  fiducial_robust.py  model_registry.py  probe_detection.py  tissue_classification.py
woundscan-engine/src/woundscan/ml/models/: __init__.py
woundscan-engine/src/woundscan/ml/training/: __init__.py
woundscan-engine/src/woundscan/monitoring/: __init__.py  error_reporting.py  metrics.py  tracing.py
woundscan-engine/src/woundscan/notes/: __init__.py  generator.py
woundscan-engine/src/woundscan/output/: __init__.py  csv_export.py  fhir_export.py  mesh_export.py  pdf_report.py  provenance.py  trajectory_plot.py
woundscan-engine/src/woundscan/quality/: __init__.py  confidence.py  edge_proximity.py  frame_consistency.py  lighting.py  motion.py  specularity.py  texture.py
woundscan-engine/src/woundscan/storage/: __init__.py  postgres.py  s3.py  tamper_evidence.py
woundscan-engine/src/woundscan/synthesis/: __init__.py  analytic_shapes.py  clinical_morphologies.py  degradation.py  ground_truth.py  irregular_beds.py
woundscan-engine/src/woundscan/validation/: __init__.py  consistency.py  phantom_calibration.py  plausibility.py  quality_score.py  temporal_plausibility.py
woundscan-engine/tests/benchmarks/: __init__.py  test_clinical_accuracy.py
woundscan-engine/tests/integration/: test_api.py  test_api_extended.py  test_pipeline.py
woundscan-engine/tests/regulatory/: __init__.py  test_property_invariants.py  test_synthetic_accuracy.py
woundscan-engine/tests/unit/: test_auth.py  test_billing_medicare.py  test_boundary_segmentation.py  test_bundle_adjustment.py  test_capture.py  test_capture_io.py  test_celery_worker.py  test_coverage_fillers.py  test_fiducial.py  test_fusion.py  test_geometry.py  test_gp_fusion.py  test_graft.py  test_mesh_export.py  test_ml_supporting.py  test_model_registry.py  test_output.py  test_output_render.py  test_perimeter_polygon.py  test_postgres_storage.py  test_quality.py  test_s3_storage.py  test_shape_descriptors.py  test_storage.py  test_surface_perimeter_irregular.py  test_synthesis.py  test_tracing.py  test_trajectory_plot.py  test_undermining.py  test_validation.py
woundscan-ios/: ExportOptions.plist  README.md  project.yml
woundscan-ios/WoundScan.xcodeproj/: project.pbxproj
woundscan-web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+98 files in other folders)
