[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woundscan-engine"
version = "1.0.0"
description = "WoundScan medical-grade 3D wound measurement engine"
requires-python = ">=3.11"
authors = [{name = "AlbaceteMed"}]
license = {text = "Proprietary"}
dependencies = [
    "numpy>=1.26,<2.2",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "structlog>=24.1",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "bcrypt>=4.0,<4.1",
    "pyotp>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "redis>=5.0",
    "celery>=5.3",
    "boto3>=1.34",
    "reportlab>=4.0",
    "matplotlib>=3.8",
    "fhir.resources>=7.1",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.23",
    "opentelemetry-sdk>=1.23",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
]
synthesis-extras = [
    "noise>=1.2.2",
]
gp = [
    "GPy>=1.13; python_version<'3.13'",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.92",
    "black>=24.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "types-Pillow",
    "types-redis",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "moto[s3]>=5.0",
    "pypdf>=4.0",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
woundscan-api = "woundscan.api.main:run"
woundscan-worker = "woundscan.api.worker:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "regulatory: marks tests as 510(k)-grade regulatory validation",
    "integration: marks tests requiring external services",
    "benchmark: marks accuracy regression benchmarks",
]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C4", "SIM", "RET"]
ignore = [
    "E501",  # line length, handled by black
    "B008",  # FastAPI Depends() in default args is the documented pattern
    "N806",  # Capital math notation (X, Y, K, V, etc.) is intentional in math modules
    "N803",  # Same: argument names like K (intrinsic matrix), F (transition matrix)
    "N817",  # Imports like `from scipy.spatial.transform import Rotation as R`
    "SIM117", # Combined with-statements harder to read
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E", "F401", "ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["GPy.*", "noise.*", "skimage.*", "scipy.*", "cv2.*", "celery.*", "reportlab.*", "fhir.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/woundscan"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
